language/move-prover/tests/sources/functional/parse_error.exp
Move prover returns: exiting with model building errors
error:

   ┌── <unknown>:1:1 ───
   │
 1 │ <unknown>
   │ ^^^^^^^^^ Unexpected ')'
   ·
 1 │ <unknown>
   │ --------- Expected ';'
   │
